--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - postscript-transformer
+    - mtl
 
 tests:
   postscript-transformer-test:
